last changes before production

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -11,10 +11,14 @@ en:
       settings_link: "Settings"
   dashboard:
     index:
-      events_card_title: "Meet Blenders"
+      main_title: "What would you like to do today?"
+      social_title: "Meet Blenders"
+      work_title: "Help a newcomer find a job"
+      donate_title: "Help the Blendin organization:"
+      events_card_title: "Events"
       events_card_subtitle: "Attend unique events and meet Blenders who share your interests and are interested in developing the Blendin community.."
-      talent_teach_card_title: "Teach My Talent"
-      talent_teach_card_subtitle: "Offer to teach a skill, interest, or hobby to other Blendin members."
+      talent_teach_card_title: "Talent sharing"
+      talent_teach_card_subtitle: "Offer to teach a skill, interest, or hobby to other Blendin members or find an exciting new skill to learn."
       talent_learn_card_title: "Learn a Talent:"
       talent_learn_card_subtitle: "Find an exciting new skill to learn from another Blendin member."
       donate_card_title: "Donate"
@@ -36,7 +40,7 @@ en:
     privacy: "Privacy Policy & Terms of Use"
     involvement: "Involvement"
     meet: "Meet Blenders"
-    teach: "Teach A Talent"
+    teach: "Talent sharing"
     learn: "Learn A Talent"
     share: "Share Your Network"
     partner: "Become A Partner"
@@ -51,7 +55,8 @@ en:
       title: "Share your talent on Blendin"
       subtitle: "This is a modified jumbotron that occupies the entire horizontal space of its parent."
       info_headline: "The request of learning is <span class='text-muted'>neverending...</span>"
-      info_content: "that’s why we want to give you an opportunity to teach <br> your <b>talents</b> and <b>interests</b> to other Blendin users.<br><br>Do you know an impressive amount of guitar chords? <br> Or have a love of photography? <br> What about knowing some interesting facts about the city you live in?<br><br>All of these are wonderful talents, and you can share them with our Blendin community!"
+      info_content: "that’s why we want to give you an opportunity to share <br> your <b>talents</b> and <b>interests</b> to other Blendin users.<br><br>Do you know an impressive amount of guitar chords? <br> Or have a love of photography? <br> What about knowing some interesting facts about the city you live in?<br><br>All of these are wonderful talents, and you can share them with our Blendin community!"
+      discover_cta: "Discover new talents - coming soon!"
   networks:
     new:
       title: "Share your network"
@@ -68,24 +73,26 @@ en:
     form:
         fullname: "Naam en achternaam"
         fullname_placeholder: ""
-        sector: "Beschrijf jouw sector en functie 💼"
+        sector: "Beschrijf jouw sector en functie"
         sector_placeholder: ""
-        network: "In welke andere sectoren heb je nog meer een breed netwerk? 👔"
+        network: "In welke andere sectoren heb je nog meer een breed netwerk?"
         network_placeholder: ""
-        email: "Email ✉️"
+        email: "Email"
         email_placeholder: "lorem@gmail.com"
-        city: "Plaats / regio van jouw werk 🏢"
+        city: "Plaats / regio van jouw werk"
         city_placeholder: "Bijv. Den Haag"
-        residence: "Waar woon je? 🌇"
+        residence: "Waar woon je?"
         residence_placeholder: "Bijv. Amsterdam"
+        experience: "Jaren werkervaring"
+        reference: "Hoe kom je bij DoneerJeNetwerk terecht?"
         gender_label: "Selecteer een optie:"
-        gender_male: "Ik ben een man 👨"
-        gender_female: "Ik ben een vrouw 👩"
-        birthday_label: "Geboorte datum 🎂"
-        phone_label: "Telefoon nummer 📱"
+        gender_male: "Ik ben een man"
+        gender_female: "Ik ben een vrouw"
+        birthday_label: "Geboorte datum"
+        phone_label: "Telefoon nummer"
         phone_placeholder: "Bijv. 0612345678"
         phone_helper: "This number only becomes visible to other users once your blend request gets accepted or you accept your request."
-        about_label: "Vertel meer over jezelf 💬"
+        about_label: "Vertel meer over jezelf"
         about_helper: "(Dit is niet verplicht, maar helpt je bij het vinden van nieuwe contacten.)"
         submit_btn: "Bevestig"
     end_submit:
@@ -250,8 +257,8 @@ en:
       community_description: "These events are open to everyone. A ticket may be required."
       subscribe_modal: "<h5>Top! Thanks for your interest in this event. </h5><br/><p>By click on partecipate you will reserve a place for this event! <br/>If your plans change, simply click the button 'Cannot Attend' to change your RSVP and allow another Blender to partecipate.</p>"
       subscribe_button: "Subscribe"
-      unsubscribe_modal: "<h5>Are you sure you want unsubscribe?</h5><p>Unsubscribe modal text to change</p>"
-      unsubscribe_button: "Unsubscribe"
+      unsubscribe_modal: "<h5>Are you sure you cannot attend?</h5>"
+      unsubscribe_button: "Cannot Attend"
     _card_small_group_event:
       subscribe: "Attend"
       see_more: "See More"
