new texts changes

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -56,22 +56,27 @@ en:
       title: "Share your talent on Blendin"
       subtitle: "This is a modified jumbotron that occupies the entire horizontal space of its parent."
       info_headline: "The quest of learning is <span class='text-muted'>neverending...</span>"
-      info_content: "that’s why we want to give you an opportunity to share <br> your <b>talents</b> and <b>interests</b> with other Blendin users.<br><br>Can you practice speaking Dutch with Newcomers?<br> Do you know an impressive amount of guitar chords? <br> Or have a love of photography? <br> What about knowing some interesting facts about the city you live in?<br><br>All of these are wonderful talents, and you can share them with our Blendin community!"
+      info_content_local: "We want to give you the opportunity to share your talents and stories with newcomers.<br/><br/>Do you want to practice Dutch with a newcomer?<br/>Would you like to learn Arabic?<br/>Do you have a passion for photography or cooking?<br/>How about nice and interesting facts about the city you live in?<br/><br/>These simple things are all special talents for someone else and you can share them or ask them of our Blendin community!"
+      info_content_newcomer: "We want to give you the chance to share your talents and stories with Dutch locals.<br/><br/>Do you want to practice Dutch with someone?<br/>Can you play a lot of songs on the guitar?<br/>Do you have a passion for photography or cooking?<br/>Do you want to know the city where you live better?<br/><br/>These simple things are all special talents for someone else and you can share them or ask them of our Blendin community!"
+      teach_talent_cta_text_local: "Do you want to meet a newcomer and offer a talent?"
+      learn_talent_cta_text_local: "Do you want to meet newcomers and learn something from him / her?"
+      teach_talent_cta_text_newcomer: "Do you want to meet a local and offer a talent?"
+      learn_talent_cta_text_newcomer: "Do you want to meet a local and learn something from him / her?"
       discover_cta: "Discover new talents - coming soon!"
-      application_cta: "Application to teach"
-      learn_cta: "Discover new talents"
+      application_cta: "Deel een Skill"
+      click_here_cta: "Click here"
   networks:
     new:
       title: "Share your network"
     index:
-      title: "Doneer je netwerk!"
-      body: "Wil jij jouw netwerk doneren aan een nieuwkomer, en zo het essentiële duwtje in de rug geven om een leven in Nederland op te bouwen? Doneer dan nu je netwerk via Blendin Work! Hoe ziet dit eruit? <br />Binnenkort starten wij een pilot van 50 nieuwkomers en 50 Nederlandse netwerk donateurs. Meld je nu snel aan, want dan maak je de grootste kans om deel uit te maken van onze pilotfase!"
+      title: "Doneer je Netwerk"
+      body: "Wil jij jouw netwerk doneren aan een nieuwkomer, en zo het essentiële duwtje in de rug geven om een leven in Nederland op te bouwen? Doneer dan nu je netwerk via Blendin! Als wij een match vinden nemen we contact met je op."
       step_title: "HOE DOE JE MEE?"
-      step_one: "Stap 1: Meld je aan als Netwerk Donateur, beschrijf jouw sector, functie en netwerk."
-      step_two: "Stap 2: Wij matchen jou met een nieuwkomer dat op zoek is naar een baan die aansluit op jouw netwerk."
-      step_three: "Stap 3: Spreek af en ga samen in gesprek over ambities, ervaringen en toekomstdromen."
-      step_four: "Stap 4: Ga binnen je netwerk op zoek naar nuttige contacten voor de nieuwkomer, regel koffie afspraken, werkbezoeken en sollicitaties."
-      step_five: "Stap 5: De nieuwkomer gaat vervolgens koffie drinken met jouw contacten, op werkbezoek of sollicitatie. Zo vergroten we diens netwerk en daarmee de kans op werk!"
+      step_one: "<strong>Stap 1:</strong> Meld je aan als Netwerk Donateur, beschrijf jouw sector, functie en netwerk."
+      step_two: "<strong>Stap 2:</strong> Als een nieuwkomer zich aanmeldt die op zoek is naar een baan die aansluit op jouw netwerk, dan nemen we contact met je op en matchen we jullie."
+      step_three: "<strong>Stap 3:</strong> Spreek af en ga samen in gesprek over ambities, ervaringen en toekomstdromen."
+      step_four: "<strong>Stap 4:</strong> Ga binnen je netwerk op zoek naar nuttige contacten voor de nieuwkomer, regel koffie afspraken, werkbezoeken en sollicitaties."
+      step_five: "<strong>Stap 5:</strong> De nieuwkomer gaat vervolgens koffie drinken met jouw contacten, op werkbezoek of sollicitatie. Zo vergroten we diens netwerk en daarmee de kans op werk!"
       action: "Doe mee & doneer je netwerk!"
     form:
         fullname: "Naam en achternaam"
