--- a/config/locales/nl.yml
+++ b/config/locales/nl.yml
@@ -11,20 +11,23 @@ nl:
       settings_link: "Instellingen"
   dashboard:
     index:
-      main_title: "What would you like to do today?"
-      social_title: "Meet Blenders"
-      work_title: "Help a Newcomer Find a Job"
-      donate_title: "Help the Blendin Organization:"
-      events_card_title: "Events"
+      main_title: "Wat wil je vandaag doen?"
+      social_title: "Ontmoet andere Blenders"
+      work_title: "Ondersteun een nieuwkomer richting werk"
+      work_title_newcomer: "Vraag een Netwerkverbinding aan - Binnenkort!"
+      donate_title: "Support stichting Blendin"
+      events_card_title: "Agenda"
       events_card_subtitle: "Kom naar unieke evenementen en ontmoet Blenders die geïnteresseerd zijn in een hechte Blendin community."
-      talent_teach_card_title: "Talent sharing"
-      talent_teach_card_subtitle: "Biedt een skill, interesse of hobby aan, aan andere Blendin leden of ontdek een leuke nieuwe skill die je kan leren."
+      talent_teach_card_title: "Deel Talenten"
+      talent_teach_card_subtitle: "Ontmoet andere Blenders en deel verhalen en talenten."
       talent_learn_card_title: "Leer een nieuwe skill"
       talent_learn_card_subtitle: "Ontdek een leuke nieuwe skill die je kan leren van een andere Blender."
       donate_card_title: "Doneer"
       donate_card_subtitle: "Elke donatie helpt direct om Blendin’s impact te vergroten en onze community uit te bouwen. Op deze manier kunnen we veel meer kansen creëren voor zowel nieuwkomers als locals."
       network_card_title: "Doneer Je Netwerk"
-      network_card_subtitle: "Veel nieuwkomers willen graag aan de slag, maar missen vaak het netwerk om werk te vinden. Jouw professionele netwerk kan voor een nieuwkomer de stap richting een passende baan of stage zijn."
+      network_card_subtitle: "Veel nieuwkomers willen graag aan de slag, maar missen vaak het netwerk om werk te vinden. Jouw professionele netwerk kan voor een nieuwkomer het verschil maken richting een passende baan of stage."
+      network_card_title_newcomer: "Something in dutch"
+      network_card_subtitle_newcomer: "Something in dutch"
       partner_card_title: "Wordt Partner"
       partner_card_subtitle: "Wil jouw bedrijf meer doen om de Blendin-community te ondersteunen? Wij staan altijd open voor nieuwe samenwerkingen."
   footer:
@@ -40,7 +43,7 @@ nl:
     privacy: "Privacy Policy & Terms of Use"
     involvement: "Involvement"
     meet: "Events"
-    teach: "Talent Sharing"
+    teach: "Deel Talenten"
     share: "DoneerJeNetwerk"
     partner: "Become A Partner"
     languages: "Select a language"
@@ -58,19 +61,24 @@ nl:
       title: "Share your talent on Blendin"
       subtitle: "This is a modified jumbotron that occupies the entire horizontal space of its parent."
       info_headline: "De zoektocht van leren is <span class='text-muted'>oneindig...</span>"
-      info_content: "daarom willen jou de kans geven om je talenten en <b>interesses</b> te delen met andere Blendin gebruikers.<br><br>Kan jij met nieuwkomers Nederlands oefenen?<br>Kan jij veel liedjes spelen op de gitaar?<br>Of een passie voor fotografie?<br>Wat dacht je van leuke en interessante feitjes van de stad waar je in woont?<br><br>Deze simpele dingen zijn allemaal bijzondere talenten voor iemand anders en je kan ze delen met onze Blendin community!"
+      info_content_local: "Wij willen jou de kans geven om jouw talenten en verhalen te delen met nieuwkomers.<br/><br/>Wil jij Nederlands oefenen met een nieuwkomer?<br/>Wil je graag Arabisch leren?<br/>Heb je een passie voor fotografie of koken?<br/>Wat dacht je van leuke en interessante feitjes van de stad waar je in woont?<br/><br/>Deze simpele dingen zijn allemaal bijzondere talenten voor iemand anders en je kan ze delen of vragen metaan onze Blendin community!"
+      info_content_newcomer: "Wij willen jou de kans geven om jouw talenten en verhalen te delen met Nederlandse locals.<br/><br/>Wil jij met iemand Nederlands oefenen?<br/>Kan jij veel liedjes spelen op de gitaar?<br/>Heb je een passie voor fotografie of koken?<br/>Wil je de stad waar je woont beter leren kennen?<br/><br/>Deze simpele dingen zijn allemaal bijzondere talenten voor iemand anders en je kan ze delen of vragen met/aan onze Blendin community!"
+      teach_talent_cta_text_local: "Wil jij een nieuwkomer ontmoeten en een talent aanbieden?"
+      learn_talent_cta_text_local: "Wil jij een nieuwkomers ontmoeten en iets van hem/haar leren?"
+      teach_talent_cta_text_newcomer: "Wil jij een nieuwkomer ontmoeten en een talent aanbieden?"
+      learn_talent_cta_text_newcomer: "Wil jij een local ontmoeten en iets van hem/haar leren?"
       discover_cta: "Discover new talents - coming soon!"
       application_cta: "Deel een Skill"
-      learn_cta: "Leer een Nieuwe Skill"
+      click_here_cta: "Klik hier"
   networks:
     new:
       title: "Share your network"
     index:
-      title: "Doneer je netwerk!"
-      body: "Wil jij jouw netwerk doneren aan een nieuwkomer, en zo het essentiële duwtje in de rug geven om een leven in Nederland op te bouwen? Doneer dan nu je netwerk via Blendin Work! Hoe ziet dit eruit? <br />Binnenkort starten wij een pilot van 50 nieuwkomers en 50 Nederlandse netwerk donateurs. Meld je nu snel aan, want dan maak je de grootste kans om deel uit te maken van onze pilotfase!"
+      title: "Doneer je Netwerk"
+      body: "Wil jij jouw netwerk doneren aan een nieuwkomer, en zo het essentiële duwtje in de rug geven om een leven in Nederland op te bouwen? Doneer dan nu je netwerk via Blendin! Als wij een match vinden nemen we contact met je op."
       step_title: "HOE DOE JE MEE?"
       step_one: "<strong>Stap 1:</strong> Meld je aan als Netwerk Donateur, beschrijf jouw sector, functie en netwerk."
-      step_two: "<strong>Stap 2:</strong> Wij matchen jou met een nieuwkomer dat op zoek is naar een baan die aansluit op jouw netwerk."
+      step_two: "<strong>Stap 2:</strong> Als een nieuwkomer zich aanmeldt die op zoek is naar een baan die aansluit op jouw netwerk, dan nemen we contact met je op en matchen we jullie."
       step_three: "<strong>Stap 3:</strong> Spreek af en ga samen in gesprek over ambities, ervaringen en toekomstdromen."
       step_four: "<strong>Stap 4:</strong> Ga binnen je netwerk op zoek naar nuttige contacten voor de nieuwkomer, regel koffie afspraken, werkbezoeken en sollicitaties."
       step_five: "<strong>Stap 5:</strong> De nieuwkomer gaat vervolgens koffie drinken met jouw contacten, op werkbezoek of sollicitatie. Zo vergroten we diens netwerk en daarmee de kans op werk!"
